[ci skip] FIX correction for some typos (#779)
Co-authored-by: ArturoAmorQ <arturo.amor-quiroz@polytechnique.edu> 00379f891c68e5c3f5e96dcdd250a87e2a3b437e

--- a/python_scripts/cross_validation_ex_01.html
+++ b/python_scripts/cross_validation_ex_01.html
@@ -719,7 +719,7 @@ regression. Indeed, the optimization used to find the optimal weights of the
 linear model are different but we don’t need to know these details for the
 exercise.</p>
 <p>Also, this classifier can become more flexible/expressive by using a so-called
-kernel that makes the model become non-linear. Again, no requirement regarding
+kernel that makes the model become non-linear. Again, no undestanding regarding
 the mathematics is required to accomplish this exercise.</p>
 <p>We will use an RBF kernel where a parameter <code class="docutils literal notranslate"><span class="pre">gamma</span></code> allows to tune the
 flexibility of the model.</p>
