--- a/python_scripts/cross_validation_sol_01.html
+++ b/python_scripts/cross_validation_sol_01.html
@@ -719,7 +719,7 @@ regression. Indeed, the optimization used to find the optimal weights of the
 linear model are different but we don’t need to know these details for the
 exercise.</p>
 <p>Also, this classifier can become more flexible/expressive by using a so-called
-kernel that makes the model become non-linear. Again, no requirement regarding
+kernel that makes the model become non-linear. Again, no understanding regarding
 the mathematics is required to accomplish this exercise.</p>
 <p>We will use an RBF kernel where a parameter <code class="docutils literal notranslate"><span class="pre">gamma</span></code> allows to tune the
 flexibility of the model.</p>
@@ -789,62 +789,62 @@ let the other parameters to the default.</p>
   <tbody>
     <tr>
       <th>0</th>
-      <td>0.012366</td>
-      <td>0.002264</td>
+      <td>0.012415</td>
+      <td>0.002340</td>
       <td>0.680000</td>
     </tr>
     <tr>
       <th>1</th>
-      <td>0.011764</td>
-      <td>0.002279</td>
+      <td>0.012332</td>
+      <td>0.002348</td>
       <td>0.746667</td>
     </tr>
     <tr>
       <th>2</th>
-      <td>0.011133</td>
-      <td>0.002179</td>
+      <td>0.011304</td>
+      <td>0.002276</td>
       <td>0.786667</td>
     </tr>
     <tr>
       <th>3</th>
-      <td>0.010773</td>
-      <td>0.002450</td>
+      <td>0.011046</td>
+      <td>0.002281</td>
       <td>0.800000</td>
     </tr>
     <tr>
       <th>4</th>
-      <td>0.011611</td>
-      <td>0.002232</td>
+      <td>0.011728</td>
+      <td>0.002694</td>
       <td>0.746667</td>
     </tr>
     <tr>
       <th>5</th>
-      <td>0.011093</td>
-      <td>0.002321</td>
+      <td>0.010911</td>
+      <td>0.002116</td>
       <td>0.786667</td>
     </tr>
     <tr>
       <th>6</th>
-      <td>0.011005</td>
-      <td>0.002144</td>
+      <td>0.011516</td>
+      <td>0.002168</td>
       <td>0.800000</td>
     </tr>
     <tr>
       <th>7</th>
-      <td>0.010183</td>
-      <td>0.002203</td>
+      <td>0.010100</td>
+      <td>0.002162</td>
       <td>0.826667</td>
     </tr>
     <tr>
       <th>8</th>
-      <td>0.010236</td>
-      <td>0.002125</td>
+      <td>0.010351</td>
+      <td>0.002095</td>
       <td>0.746667</td>
     </tr>
     <tr>
       <th>9</th>
-      <td>0.010206</td>
-      <td>0.002153</td>
+      <td>0.010434</td>
+      <td>0.002209</td>
       <td>0.733333</td>
     </tr>
   </tbody>
