--- a/python_scripts/linear_models_feature_engineering_classification.html
+++ b/python_scripts/linear_models_feature_engineering_classification.html
@@ -2688,7 +2688,7 @@ hyperparameters).</p>
 from the previous models: its decision boundary can take a diagonal
 direction. Furthermore, we can observe that predictions are very confident in
 the low density regions of the feature space, even very close to the decision
-boundary</p>
+boundary.</p>
 <p>We can obtain very similar results by using a kernel approximation technique
 such as the Nyström method with a polynomial kernel:</p>
 <div class="cell docutils container">
