[ci skip] Fix minor typo in `datasets_california_housing.py` (#803) 39b6bb57df33b882a1ad847c40755effe252f540

--- a/python_scripts/datasets_california_housing.html
+++ b/python_scripts/datasets_california_housing.html
@@ -1147,9 +1147,9 @@ statistics for these features:</p>
 <p>For each of these features, comparing the <code class="docutils literal notranslate"><span class="pre">max</span></code> and <code class="docutils literal notranslate"><span class="pre">75%</span></code> values, we can see a
 huge difference. It confirms the intuitions that there are a couple of extreme
 values.</p>
-<p>Up to know, we discarded the longitude and latitude that carry geographical
-information. In short, the combination of this feature could help us to decide
-if there are locations associated with high-valued houses. Indeed, we could
+<p>Up to now, we discarded the longitude and latitude that carry geographical
+information. In short, the combination of these features could help us decide
+if there are locations associated with high-value houses. Indeed, we could
 make a scatter plot where the x- and y-axis would be the latitude and
 longitude and the circle size and color would be linked with the house value
 in the district.</p>
