[ci skip] better formulation to wrap-up (#784) 2dbb76dea0e59bcdab2d4370692c213dd163d633

--- a/python_scripts/cross_validation_time.html
+++ b/python_scripts/cross_validation_time.html
@@ -969,10 +969,11 @@ behaviour.</p>
 </div>
 </div>
 </div>
-<p>In conclusion, it is really important to not use an out of the shelves
+<p>In conclusion, it is really important not to carelessly use a
 cross-validation strategy which do not respect some assumptions such as having
-i.i.d data. It might lead to absurd results which could make think that a
-predictive model might work.</p>
+i.i.d data. It might lead to misleading outcomes, creating the false
+impression that a predictive model performs well when it may not be the case
+in the intended real-world scenario.</p>
 </section>
 
     <script type="text/x-thebe-config">
