--- a/tuning/parameter_tuning_module_take_away.html
+++ b/tuning/parameter_tuning_module_take_away.html
@@ -679,12 +679,12 @@ document.write(`
 wisely chosen;</p></li>
 <li><p>The search for the best hyperparameters can be automated with a grid-search
 approach or a randomized search approach;</p></li>
-<li><p>A grid-search is expensive and does not scale when the number of
-hyperparameters to optimize increase. Besides, the combination are sampled
-only on a regular grid.</p></li>
-<li><p>A randomized-search allows a search with a fixed budget even with an
-increasing number of hyperparameters. Besides, the combination are sampled
-on a non-regular grid.</p></li>
+<li><p>A grid-search can be computationally expensive and becomes less attractive as
+the number of hyperparameters to explore increases. Moreover, the combinations
+are sampled on a fixed, regular grid.</p></li>
+<li><p>A randomized-search allows exploring within a fixed budget, even as the number
+of hyperparameters increases. In this case, combinations can be sampled either
+on a regular grid or from a given distribution.</p></li>
 </ul>
 </section>
 <section id="to-go-further">
