[ci skip] Sync quizzes, exercises and notebooks (#824) e430acff2a234be8ce6a649e144e7710f576604c

--- a/predictive_modeling_pipeline/wrap_up_quiz.html
+++ b/predictive_modeling_pipeline/wrap_up_quiz.html
@@ -790,7 +790,7 @@ model predicts systematically better than the other.</p>
 <p>Another way is to compare cross-validation test scores of both models
 fold-to-fold, i.e. counting the number of folds where one model has a better
 test score than the other. This provides some extra information: are some
-partitions of the data making the classifaction task particularly easy or hard
+partitions of the data making the classification task particularly easy or hard
 for both models?</p>
 <p>Let’s visualize the second approach.</p>
 <p><img alt="Fold-to-fold comparison" src="../_images/numerical_pipeline_wrap_up_quiz_comparison.png" /></p>
