--- a/tuning/parameter_tuning_wrap_up_quiz.html
+++ b/tuning/parameter_tuning_wrap_up_quiz.html
@@ -758,13 +758,13 @@ Remember that one way to compare two models is comparing the cross-validation te
 i.e. counting the number of folds where one model has a better test score than the other</p>
 <ul class="simple">
 <li><p>a) Looking at the individual cross-validation scores, using a model with <code class="docutils literal notranslate"><span class="pre">n_neighbors=5</span></code> is
-substantially better (at least 7 of the cross-validations scores are better) than a model with
+substantially better (at least 7 of the cross-validations scores are strictly better) than a model with
 <code class="docutils literal notranslate"><span class="pre">n_neighbors=51</span></code></p></li>
 <li><p>b) Looking at the individual cross-validation scores, using a model with <code class="docutils literal notranslate"><span class="pre">n_neighbors=5</span></code> is
-substantially better (at least 7 of the cross-validations scores are better) than a model with
+substantially better (at least 7 of the cross-validations scores are strictly better) than a model with
 <code class="docutils literal notranslate"><span class="pre">n_neighbors=101</span></code></p></li>
 <li><p>c) Looking at the individual cross-validation scores, a 5 nearest neighbors using a <code class="docutils literal notranslate"><span class="pre">StandardScaler</span></code>
-is substantially better (at least 7 of the cross-validations scores are better) than a 5 nearest
+is substantially better (at least 7 of the cross-validations scores are strictly better) than a 5 nearest
 neighbors using the raw features (without scaling).</p></li>
 </ul>
 <p><em>Select all answers that apply</em></p>
@@ -802,15 +802,15 @@ in the range <code class="docutils literal notranslate"><span class="pre">[5,</s
 <p>Which of the following statements hold:</p>
 <ul class="simple">
 <li><p>a) Looking at the individual cross-validation scores, the best ranked model using a
-<code class="docutils literal notranslate"><span class="pre">StandardScaler</span></code> is substantially better (at least 7 of the cross-validations scores are better)
+<code class="docutils literal notranslate"><span class="pre">StandardScaler</span></code> is substantially better (at least 7 of the cross-validations scores are strictly better)
 than using any other preprocessor</p></li>
 <li><p>b) Using any of the preprocessors has always a better ranking than using no preprocessor, irrespective
 of the value <code class="docutils literal notranslate"><span class="pre">of</span> <span class="pre">n_neighbors</span></code></p></li>
 <li><p>c) Looking at the individual cross-validation scores, the model with <code class="docutils literal notranslate"><span class="pre">n_neighbors=5</span></code> and
-<code class="docutils literal notranslate"><span class="pre">StandardScaler</span></code> is substantially better (at least 7 of the cross-validations scores are better)
+<code class="docutils literal notranslate"><span class="pre">StandardScaler</span></code> is substantially better (at least 7 of the cross-validations scores are strictly better)
 than the model with <code class="docutils literal notranslate"><span class="pre">n_neighbors=51</span></code> and <code class="docutils literal notranslate"><span class="pre">StandardScaler</span></code></p></li>
 <li><p>d) Looking at the individual cross-validation scores, the model with <code class="docutils literal notranslate"><span class="pre">n_neighbors=51</span></code> and
-<code class="docutils literal notranslate"><span class="pre">StandardScaler</span></code> is substantially better (at least 7 of the cross-validations scores are better)
+<code class="docutils literal notranslate"><span class="pre">StandardScaler</span></code> is substantially better (at least 7 of the cross-validations scores are strictly better)
 than the model with <code class="docutils literal notranslate"><span class="pre">n_neighbors=101</span></code> and <code class="docutils literal notranslate"><span class="pre">StandardScaler</span></code></p></li>
 </ul>
 <p><em>Select all answers that apply</em></p>
