[ci skip] Synchronize quizzes 9a6b8390f841d1326ec27dfb3d779f5bf5d92600

--- a/predictive_modeling_pipeline/wrap_up_quiz.html
+++ b/predictive_modeling_pipeline/wrap_up_quiz.html
@@ -806,6 +806,13 @@ model using only numerical features lies in the range:</p>
 </ul>
 <p><em>Select a single answer</em></p>
 </div>
+<div class="admonition note">
+<p class="admonition-title">Note</p>
+<p>It is normal for this module to take longer than expected for people who are
+discovering Python programming, but don’t get discouraged! The programming
+mechanisms will come with experience and the programming exercises in the
+following modules will seem more and more natural as time goes by.</p>
+</div>
 </section>
 
     <script type="text/x-thebe-config">
