--- a/tuning/parameter_tuning_wrap_up_quiz.html
+++ b/tuning/parameter_tuning_wrap_up_quiz.html
@@ -798,7 +798,9 @@ scikit-learn user guide but this is not required to answer the quiz questions.</
 the preprocessor and the number of neighbors on the stratified 10-fold
 cross-validated <code class="docutils literal notranslate"><span class="pre">balanced_accuracy</span></code> metric. We want to study the <code class="docutils literal notranslate"><span class="pre">n_neighbors</span></code>
 in the range <code class="docutils literal notranslate"><span class="pre">[5,</span> <span class="pre">51,</span> <span class="pre">101]</span></code> and <code class="docutils literal notranslate"><span class="pre">preprocessor</span></code> in the range
-<code class="docutils literal notranslate"><span class="pre">all_preprocessors</span></code>.</p>
+<code class="docutils literal notranslate"><span class="pre">all_preprocessors</span></code>. Although we wouldn’t do this in a real setting (and
+prefer using nested cross validation), for this question, do the
+cross-validation on the entire dataset.</p>
 <p>Which of the following statements hold:</p>
 <ul class="simple">
 <li><p>a) Looking at the individual cross-validation scores, the best ranked model using a
