--- a/python_scripts/parameter_tuning_ex_03.html
+++ b/python_scripts/parameter_tuning_ex_03.html
@@ -728,8 +728,9 @@ tune its hyperparameters.</p>
 </div>
 </div>
 </div>
-<p>Use <code class="docutils literal notranslate"><span class="pre">RandomizedSearchCV</span></code> with <code class="docutils literal notranslate"><span class="pre">n_iter=20</span></code> to find the best set of
-hyperparameters by tuning the following parameters of the <code class="docutils literal notranslate"><span class="pre">model</span></code>:</p>
+<p>Use <code class="docutils literal notranslate"><span class="pre">RandomizedSearchCV</span></code> with <code class="docutils literal notranslate"><span class="pre">n_iter=20</span></code> and
+<code class="docutils literal notranslate"><span class="pre">scoring=&quot;neg_mean_absolute_error&quot;</span></code> to tune the following hyperparameters
+of the <code class="docutils literal notranslate"><span class="pre">model</span></code>:</p>
 <ul class="simple">
 <li><p>the parameter <code class="docutils literal notranslate"><span class="pre">n_neighbors</span></code> of the <code class="docutils literal notranslate"><span class="pre">KNeighborsRegressor</span></code> with values
 <code class="docutils literal notranslate"><span class="pre">np.logspace(0,</span> <span class="pre">3,</span> <span class="pre">num=10).astype(np.int32)</span></code>;</p></li>
@@ -738,6 +739,10 @@ hyperparameters by tuning the following parameters of the <code class="docutils 
 <li><p>the parameter <code class="docutils literal notranslate"><span class="pre">with_std</span></code> of the <code class="docutils literal notranslate"><span class="pre">StandardScaler</span></code> with possible values <code class="docutils literal notranslate"><span class="pre">True</span></code>
 or <code class="docutils literal notranslate"><span class="pre">False</span></code>.</p></li>
 </ul>
+<p>The <code class="docutils literal notranslate"><span class="pre">scoring</span></code> function is expected to return higher values for better models,
+since grid/random search objects <strong>maximize</strong> it. Because of that, error
+metrics like <code class="docutils literal notranslate"><span class="pre">mean_absolute_error</span></code> must be negated (using the <code class="docutils literal notranslate"><span class="pre">neg_</span></code> prefix)
+to work correctly (remember lower errors represent better models).</p>
 <p>Notice that in the notebook “Hyperparameter tuning by randomized-search” we
 pass distributions to be sampled by the <code class="docutils literal notranslate"><span class="pre">RandomizedSearchCV</span></code>. In this case we
 define a fixed grid of hyperparameters to be explored. Using a <code class="docutils literal notranslate"><span class="pre">GridSearchCV</span></code>
