[ci skip] Feature branch to update to 1.6 (#813)
* Feature branch to update to 1.6

* MNT Fix several FutureWarnings (#810)

* MTN Wrap up quiz sklearn 1.6 verification (#817)

* MAINT Use class_of_interest in DecisionBoundaryDisplay (#772)

* Resync everything

---------

Co-authored-by: Arturo Amor <86408019+ArturoAmorQ@users.noreply.github.com>
Co-authored-by: SebastienMelo <125986598+SebastienMelo@users.noreply.github.com> c9728c89fa8b415220e978213c4c31f792cf4e18

--- a/python_scripts/trees_ex_01.html
+++ b/python_scripts/trees_ex_01.html
@@ -747,9 +747,9 @@ the effect of increasing the depth of the tree.</p>
 <div class="admonition warning">
 <p class="admonition-title">Warning</p>
 <p>At this time, it is not possible to use <code class="docutils literal notranslate"><span class="pre">response_method=&quot;predict_proba&quot;</span></code> for
-multiclass problems. This is a planned feature for a future version of
-scikit-learn. In the mean time, you can use <code class="docutils literal notranslate"><span class="pre">response_method=&quot;predict&quot;</span></code>
-instead.</p>
+multiclass problems on a single plot. This is a planned feature for a future
+version of scikit-learn. In the mean time, you can use
+<code class="docutils literal notranslate"><span class="pre">response_method=&quot;predict&quot;</span></code> instead.</p>
 </div>
 <div class="cell docutils container">
 <div class="cell_input docutils container">
