[ci skip] Fix typos (#839) ee3bf0ee7997e0a2b46439e0559dd5882f25727e

--- a/python_scripts/01_tabular_data_exploration.html
+++ b/python_scripts/01_tabular_data_exploration.html
@@ -894,7 +894,7 @@ statistics, commonly used equivalent terms are “variable”, “attribute”, 
 </table>
 </div></div></div>
 </div>
-<p>An alternative is to omit the <code class="docutils literal notranslate"><span class="pre">head</span></code> method. This would output the intial and
+<p>An alternative is to omit the <code class="docutils literal notranslate"><span class="pre">head</span></code> method. This would output the initial and
 final rows and columns, but everything in between is not shown by default. It
 also provides the dataframe’s dimensions at the bottom in the format <code class="docutils literal notranslate"><span class="pre">n_rows</span></code>
 x <code class="docutils literal notranslate"><span class="pre">n_columns</span></code>.</p>
