--- a/python_scripts/parameter_tuning_grid_search.html
+++ b/python_scripts/parameter_tuning_grid_search.html
@@ -2567,7 +2567,7 @@ training set).</p>
 <p>In this notebook we have seen:</p>
 <ul class="simple">
 <li><p>how to optimize the hyperparameters of a predictive model via a grid-search;</p></li>
-<li><p>that searching for more than two hyperparamters is too costly;</p></li>
+<li><p>that searching for more than two hyperparameters is too costly;</p></li>
 <li><p>that a grid-search does not necessarily find an optimal solution.</p></li>
 </ul>
 </section>
