--- a/python_scripts/linear_models_sol_02.html
+++ b/python_scripts/linear_models_sol_02.html
@@ -710,7 +710,7 @@ the new features are expected to be predictive. For instance, think of a
 classification model to decide if a patient has risk of developing a heart
 disease. This would depend on the patient’s Body Mass Index which is defined
 as <code class="docutils literal notranslate"><span class="pre">weight</span> <span class="pre">/</span> <span class="pre">height</span> <span class="pre">**</span> <span class="pre">2</span></code>.</p>
-<p>We load the dataset penguins dataset. We first use a set of 3 numerical
+<p>We load the penguins dataset. We first use a set of 3 numerical
 features to predict the target, i.e. the body mass of the penguin.</p>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
